--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@ For the controls of Rigid Motors, we wanted to keep it simple. The team all agre
                     <section class="clearfix">
                         <div class="g3">
                             <div class="image">
-                                <img src="http://i.imgur.com/zt0h2A8.png" alt="">
+                                <img src="http://i.imgur.com/22H7ozv.png" alt="">
                             </div>
                         </div>
                         <div class="g4">
@@ -379,7 +379,7 @@ For the controls of Rigid Motors, we wanted to keep it simple. The team all agre
                     <section class="clearfix">
                         <div class="g3">
                             <div class="image">
-                                <img src=http://i.imgur.com/T8lSmmo.png"" alt="">
+                                <img src="http://i.imgur.com/MhE9lfx.jpg" alt="">
                             </div>
                         </div>
                         <div class="g4">
@@ -402,7 +402,7 @@ For the controls of Rigid Motors, we wanted to keep it simple. The team all agre
                     <section class="clearfix">
                         <div class="g3">
                             <div class="image">
-                                <img src=http://i.imgur.com/T8lSmmo.png"" alt="">
+                                <img src="http://i.imgur.com/MJ6hmOk.jpg" alt="">
                             </div>
                         </div>
                         <div class="g4">
