--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@ For the controls of Rigid Motors, we wanted to keep it simple. The team all agre
               <!-- Infection Page -->
                 <div id="infection">
                     <section class="clearfix">
-                        <div class="g3">
+                        <div class="g6">
                             <div class="image">
                                 <img src="http://i.imgur.com/22H7ozv.png" alt="">
                             </div>
@@ -387,7 +387,7 @@ For the controls of Rigid Motors, we wanted to keep it simple. The team all agre
 				Click@MOMA
                             </h1>
 			    <pre>
-Rigid Motors is a mobile puzzle-platformer game made using Flash with the Citrus engine. In Rigid Motors you play as an infinite supply of robot cronies, trying to find treasure in ancient catacombs. The catacombs are treacherous, filled with spikes, lava, and all manner of other nasty traps. Fortunately, when one robot dies it leaves its corpse behind to be used as a platform for later cronies. The chances of any given robot getting the treasure are small, but together they will prevail.<br><br> This project taught me a lot about thinking about platform. In targeting mobile devices, I worked with the designer to design controls and levels that felt good, and with the artist to get around the graphical limitations of the platform. 
+Rigid Motors is a mobile puzzle-platformer game made using Flash with the Citrus engine. In Rigid Motors you play as an infinite supply of robot cronies, trying to find treasure in ancient catacombs. The catacombs are treacherous, filled with spikes, lava, and all manner of other nasty traps. Fortunately, when one robot dies it leaves its corpse  t to be used as a platform for later cronies. The chances of any given robot getting the treasure are small, but together they will prevail.<br><br> This project taught me a lot about thinking about platform. In targeting mobile devices, I worked with the designer to design controls and levels that felt good, and with the artist to get around the graphical limitations of the platform. 
 <h6>
 Controls
 </h6>
@@ -400,7 +400,7 @@ For the controls of Rigid Motors, we wanted to keep it simple. The team all agre
               <!-- Vicious Orb Page -->
                 <div id="viciousorb">
                     <section class="clearfix">
-                        <div class="g3">
+                        <div class="g6">
                             <div class="image">
                                 <img src="http://i.imgur.com/MJ6hmOk.jpg" alt="">
                             </div>
