--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <section class="clearfix">
                         <div class="g2">
                             <div class="photo">
-                                <img src="http://i.imgur.com/ZS58Iab.jpg" alt="David Karr Johnston">
+                                <img src="http://i.imgur.com/1pyPWHX.png" alt="David Karr Johnston">
                             </div>
                             <div class="info">
                                 <h2>
@@ -356,7 +356,7 @@ For the controls of Rigid Motors, we wanted to keep it simple. The team all agre
                     <section class="clearfix">
                         <div class="g6">
                             <div class="image">
-                                <img src="http://i.imgur.com/22H7ozv.png" alt="">
+                                <img src="http://i.imgur.com/ABCwvxd.png" alt="">
                             </div>
                         </div>
                         <div class="g4">
