--- a/index.html
+++ b/index.html
@@ -410,11 +410,11 @@ None of us had experience with designing or building an arcade cabinet before, s
 				Vicious Orb
                             </h1>
 			    <pre>
-
+Vicious Orb is a project that I am currently working on alone (hence the <a href="http://braid-game.com/">Tim</a> sprites). Vicious orb is about leaping into the air, grabbing a ball made of a highly instable material, and blasting it at your friend before your feet touch the ground. Vicious orb is about playing basketball with a nuclear bomb. Vicious orb is what CERN scientists do during their lunch hour. In Vicious Orb I am trying to make a hilariously fun, competitive, local multiplayer game, becuase those are the kinds of games I like to play.
 <h6>
-Controls
+Making it Juicy
 </h6>
-
+Vicious Orb is meant to be a very visceral game. It is a competitive action game, I want it to feel good. To do that, I have been spending a lot of time tweaking the feedback of the game. My goal is to make it so that every graphical and aural effect is scaled to the tension of the current game state. I've learned a lot in doing this. Getting to be the designer of the game as well as programming it has made me think more about what designers really need to make the games they want to make. This has also encouraged me to work on more small projects. I have been working on this in my spare time for a little while now, but I finished the first prototype in a few hours.
 			    </pre>
                         </div>
                     </section>
