--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                                     Game Programmer
                                 </h4>
                                 <p>
-                                    Hi! I'm a student game programmer currently attending Champlain College. I am particularly interested in graphics programming, but I have passion for many parts of the software development process. I love Math, Literature, Nuts4Nuts, writing implements and Prince. I get excited about tiny things.
+                                    Hi! I'm a student game programmer currently attending Champlain College. I am particularly interested in indie games, but I have passion for all kinds of programming. I love Math, Literature, Nuts4Nuts, writing implements and Prince. I get excited about tiny things.
                                 </p>
                             </div>
                         </div>
