--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                                         Rigid Motors
                                     </h5>
                                     <p>
-				    Worked with a designer, producer, and artist over four weeks to make an mobile puzzle-platformer in Flash.<br><br>
+				    Worked with a designer, producer, and artist over four weeks to make a mobile puzzle-platformer in Flash.<br><br>
 This project taught me a lot about thinking about platform. In targeting mobile devices, I worked with the designer to design controls and levels that feel good, and with the artist to get around the graphical limitations of the platform.
                                    </p>
                                 </li>
@@ -177,7 +177,7 @@ This project taught me a lot about thinking about platform. In targeting mobile 
                                     </h5>
                                     <p>
 				    Worked with two other programmers to develop an implementation of the apriori algorithm for large data sets. Focused on optimizing for time at the cost of memory.<br><br>
-This project taught me an incredibly valuable lesson: always communicate. We were expected to work on the project over spring break, but as soon as I got home my computer died. I was focused on getting it back in working order, and forgot to communicate my dilemma to my teammates. Two days later, I got my computer running and told the team what happened, but the time was still gone. The project got finished; it just took some extra stress and train-programming. From then on I’ve made sure to inform the team I am working with at the first sign of any sizable problem.
+This project taught me an incredibly valuable lesson: always communicate. We were expected to work on the project over spring break, but as soon as I got home my computer died. I was focused on getting it back in working order, and forgot to communicate my dilemma to my teammates. Two days later, I got my computer running and told the team what happened, but the time was still gone. The project got finished; it just took some extra stress and train-programming. From then on I’ve made sure to inform my team at the first sign of any sizable problem.
                                     </p>
                                 </li>
                                 <li>
@@ -186,7 +186,7 @@ This project taught me an incredibly valuable lesson: always communicate. We wer
                                     </h5>
                                     <p>
 				    Worked alone on an arena shoot ‘em up for PC and Xbox 360. Implemented many techniques of 2d graphics programming, including parallax scrolling, a particle system, and pixel shaders in HLSL.<br><br>
-				    This project gave me my first taste of the fun of graphics programming. Though the techniques implemented are very simple, it gave me a taste of the joy of turning math into beauty. There are many facets to creating a great game, but the one which strikes us most immediately and frequently is the visual aesthetic. This project made me realize that graphics programming beautifully combines two of my favorite things: math and art.
+				    This project introduced me to the creativity of graphics programming. Though the techniques implemented were very simple, it gave me a taste of the joy of turning math into beauty. There are many facets to creating a great game, but the one which strikes us most immediately and frequently is the visual aesthetic. This project made me realize that graphics programming beautifully combines two of my favorite things: math and art.
                                     </p>
                                 </li>
                                 <li>
@@ -195,7 +195,7 @@ This project taught me an incredibly valuable lesson: always communicate. We wer
                                     </h5>
                                     <p>
 				    Worked with a team to create an arcade cabinet for a one button game (Gamma IV, by Cactus).<br><br>
-                                    This was the first project that really made me think about controls and presentation when it comes to videogames. We already knew what kind of game we were working with, but we had to create an arcade cabinet that would both mesh well with the existing systems of the game as well as atract people to play. It was a lot of fun getting to create a unique presentation for a game, and showing our work at the Museum of Modern Art, in New York.
+                                    This was the first project that really made me think about controls and presentation when it comes to videogames. We already knew what kind of game we were working with, but we had to create an arcade cabinet that would both mesh well with the existing systems of the game as well as attract people to play. It was a lot of fun getting to create a unique presentation for a game, and showing our work at the Museum of Modern Art, in New York City.
                                     </p>
                                 </li>
                             </ul>
@@ -232,7 +232,7 @@ This project taught me an incredibly valuable lesson: always communicate. We wer
                                         Governance  Committee Member
                                     </h5><span class="label label-info">Sept 2011-June 2012</span>
                                     <p>
-                                        Served on this newly formed subcommittee of the Board of Trustees, which was charged with reviewing and revising the function of the Board of Trustees and the manner in which the school is governed.
+                                        Served on this newly formed subcommittee of the Board of Trustees at the Brooklyn Free School, which was charged with reviewing and revising the function of the Board of Trustees and the manner in which the school is governed.
                                     </p>
                                 </li>
                             </ul>
@@ -285,7 +285,7 @@ This project taught me an incredibly valuable lesson: always communicate. We wer
                 <div id="portfolio">
                     <section class="clearfix">
                         <div class="g5">
-                            <div class="image">
+                            <div class="image-link">
                                 <img src=http://i.imgur.com/pk8GEx2.png"" alt="">
                                 <div class="image-overlay">
                                     <div class="image-link">
@@ -295,7 +295,7 @@ This project taught me an incredibly valuable lesson: always communicate. We wer
                             </div>
                         </div>
                         <div class="g5">
-                            <div class="image">
+                            <div class="image-link">
                                 <img src=http://i.imgur.com/hERvFtU.png"" alt="">
                                 <div class="image-overlay">
                                     <div class="image-link">
@@ -305,7 +305,7 @@ This project taught me an incredibly valuable lesson: always communicate. We wer
                             </div>
                         </div>
                         <div class="g5">
-                            <div class="image">
+                            <div class="image-link">
                                 <img src=http://i.imgur.com/T8lSmmo.png"" alt="">
                                 <div class="image-overlay">
                                     <div class="image-link">
@@ -315,7 +315,7 @@ This project taught me an incredibly valuable lesson: always communicate. We wer
                             </div>
                         </div>
                         <div class="g5">
-                            <div class="image">
+                            <div class="image-link">
                                 <img src=http://i.imgur.com/SzYEibJ.png"" alt="">
                                 <div class="image-overlay">
                                     <div class="image-link">
@@ -341,7 +341,7 @@ This project taught me an incredibly valuable lesson: always communicate. We wer
 				Rigid Motors
                             </h1>
 			    <pre>
-Rigid Motors is a mobile game I worked on with an <a href="http://www.walterweaver.com">artist</a>, producer, and two designers. It is a mobile puzzle-platformer game made using Flash with the Citrus engine. In Rigid Motors you play as an infinite supply of robot cronies, trying to find treasure in ancient catacombs. The catacombs are treacherous, filled with spikes, lava, and all manner of other nasty traps. Fortunately, when one robot dies it leaves its corpse behind to be used as a platform for later cronies. The chances of any given robot getting the treasure are small, but together they will prevail.<br><br> This project taught me a lot about thinking about platform. In targeting mobile devices, I worked with the designer to design controls and levels that felt good, and with the artist to get around the graphical limitations of the platform. 
+Rigid Motors is a mobile game I worked on with an <a href="http://www.walterweaver.com">artist</a>, producer, and two designers. It is a mobile puzzle-platformer game made using Flash with the Citrus engine. In Rigid Motors you play as an infinite supply of robot minions, trying to find treasure in ancient catacombs. The catacombs are treacherous, filled with spikes, lava, and all manner of other nasty traps. Fortunately, when one robot dies it leaves its corpse behind to be used as a platform for later minions. The odds of any given robot getting the treasure are small, but together they will prevail.<br><br> This project taught me a lot about thinking about platform. In targeting mobile devices, I worked with the designer to design controls and levels that felt good, and with the artist to get around the graphical limitations of the platform. 
 <h6>
 Controls
 </h6>
@@ -368,7 +368,7 @@ Infection is a current project that I am working on with an <a href="http://www.
 <h6>
 Teaching the Player
 </h6>
-Working on infection has taught me a great deal about presenting information to the player. We are trying to make an elegant abstract strategy game, and in doing so we are really trying hard to make every bit of information clear, yet inconspicuous. We have worked a lot on non-textual cues. For instance, found in testing that we kept having problems with players not knowing whose turn it was, and which pieces could move. We didn't want to throw around popups every second saying exactly what was happening, but we did want it to be clear. At this point, just about everything related to a player lights up when it's their turn, and pieces have two different effects indicating that they can move. Players are starting to get the message. The game still has a long way to go, but it is shaping up nicely so far.
+Working on infection has taught me a great deal about presenting information to the player. We are trying to make an elegant abstract strategy game, and in doing so we are focusing on making every bit of information clear, yet inconspicuous. We have worked a lot on non-textual cues. For instance, we repeatedly found in testing that players were having problems knowing whose turn it was, and which pieces could move. We didn't want to throw around popups every second saying exactly what was happening, but we did want it to be clear. At this point, just about everything related to a player lights up when it's their turn, and pieces have two different effects indicating that they can move. Players are starting to get the message. The game still has a long way to go, but it is shaping up nicely so far.
 			    </pre>
                         </div>
                     </section>
