--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@ This project taught me an incredibly valuable lesson: always communicate. We wer
                 <div id="portfolio">
                     <section class="clearfix">
                         <div class="g5">
-                            <div class="image-link">
+                            <div class="image">
                                 <img src=http://i.imgur.com/pk8GEx2.png"" alt="">
                                 <div class="image-overlay">
                                     <div class="image-link">
@@ -295,7 +295,7 @@ This project taught me an incredibly valuable lesson: always communicate. We wer
                             </div>
                         </div>
                         <div class="g5">
-                            <div class="image-link">
+                            <div class="image">
                                 <img src=http://i.imgur.com/hERvFtU.png"" alt="">
                                 <div class="image-overlay">
                                     <div class="image-link">
@@ -305,7 +305,7 @@ This project taught me an incredibly valuable lesson: always communicate. We wer
                             </div>
                         </div>
                         <div class="g5">
-                            <div class="image-link">
+                            <div class="image">
                                 <img src=http://i.imgur.com/T8lSmmo.png"" alt="">
                                 <div class="image-overlay">
                                     <div class="image-link">
@@ -315,7 +315,7 @@ This project taught me an incredibly valuable lesson: always communicate. We wer
                             </div>
                         </div>
                         <div class="g5">
-                            <div class="image-link">
+                            <div class="image">
                                 <img src=http://i.imgur.com/SzYEibJ.png"" alt="">
                                 <div class="image-overlay">
                                     <div class="image-link">
