tried to put picture at end of moma page

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ This project taught me an incredibly valuable lesson: always communicate. We wer
                     <section class="clearfix">
                         <div class="g5">
                             <div class="image">
-                                <img src=http://i.imgur.com/pk8GEx2.png"" alt="">
+                                <img src="http://i.imgur.com/pk8GEx2.png" alt="">
                                 <div class="image-overlay">
                                     <div class="image-link">
                                         <a href="#rigidmotors" class="btn">Rigid Motors</a>
@@ -296,7 +296,7 @@ This project taught me an incredibly valuable lesson: always communicate. We wer
                         </div>
                         <div class="g5">
                             <div class="image">
-                                <img src=http://i.imgur.com/hERvFtU.png"" alt="">
+                                <img src="http://i.imgur.com/hERvFtU.png" alt="">
                                 <div class="image-overlay">
                                     <div class="image-link">
                                         <a href="#infection" class="btn">Infection</a>
@@ -306,7 +306,7 @@ This project taught me an incredibly valuable lesson: always communicate. We wer
                         </div>
                         <div class="g5">
                             <div class="image">
-                                <img src=http://i.imgur.com/T8lSmmo.png"" alt="">
+                                <img src="http://i.imgur.com/T8lSmmo.png" alt="">
                                 <div class="image-overlay">
                                     <div class="image-link">
                                         <a href="#moma" class="btn">Click@MOMA</a>
@@ -316,7 +316,7 @@ This project taught me an incredibly valuable lesson: always communicate. We wer
                         </div>
                         <div class="g5">
                             <div class="image">
-                                <img src=http://i.imgur.com/SzYEibJ.png"" alt="">
+                                <img src="http://i.imgur.com/SzYEibJ.png" alt="">
                                 <div class="image-overlay">
                                     <div class="image-link">
                                         <a href="#viciousorb" class="btn">Vicious Orb</a>
@@ -394,6 +394,12 @@ The Cabinet
 None of us had experience with designing or building an arcade cabinet before, so first we got to thinking about what we like in arcade cabinets. We all agreed that we like tight controls, good theming, and eye-catching design. Gamma IV is a flashy game, so we didn't think we would have a problem catching people's eyes. We wanted to go with something powerful, mysterious, and symmetrical, so we decided on a pyramid as our basic shape. We also liked the idea of pressing down on the top of a pyramid to make something happen. Who doesn't want to press the top of a pyramid? We wanted our pyramid to complement the flashiness of the game, so we covered it in reflective mylar and strapped some lights to it. Finally, we put a little kneeling pad at the base of the pyramid so the player could truly feel the glory of Gamma IV.
 			    </pre>
                         </div>
+                        <div class="g3">
+                            <div class="image">
+                                <img src="http://i.imgur.com/T8lSmmo.png" alt="">
+                            </div>
+                        </div>
+
                     </section>
                 </div>
               <!-- End MOMA Page -->
