--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                                     Game Programmer
                                 </h4>
                                 <p>
-                                    Hi! I'm a student game programmer currently attending Champlain College. I am particularly interested in indie games, but I have passion for all kinds of programming. I love Math, Literature, Nuts4Nuts, writing implements and Prince. I get excited about tiny things.
+                                    Hi! I'm a student game programmer currently attending Champlain College. I am particularly interested in graphics, but I have passion for all kinds of programming. I love Math, Literature, Nuts4Nuts, writing implements and Prince. I get excited about tiny things.
                                 </p>
                             </div>
                         </div>
@@ -109,7 +109,6 @@
                               <i class="icon-envelope"></i>
                               <div class="item-data">
                                 <h3><a href="mailto:dvdjoh@gmail.com">dvdjoh@gmail.com</a></h3>
-                                <p>Email Address</p>
                               </div>
                             </div>
                           </div>
@@ -118,7 +117,6 @@
                               <i class="icon-facebook"></i>
                               <div class="item-data">
                                 <h3><a href="http://fb.me/david.johnston.14268769">david.johnston</a></h3>
-                                <p>Facebook Profile</p>
                               </div>
                             </div>
                           </div>
@@ -127,7 +125,14 @@
                               <i class="icon-twitter"></i>
                               <div class="item-data">
                                 <h3><a href="http://twitter.com/nuts4nuts4nuts">@nuts4nuts4nuts</a></h3>
-                                <p>Twitter Handle</p>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="g1">
+                            <div class="item-box clearfix">
+                              <i class="icon-twitter"></i>
+                              <div class="item-data">
+                                <h3><a href="https://github.com/nuts4nuts4nuts"></a>Github</h3>
                               </div>
                             </div>
                           </div>
