--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
                           </div>
                           <div class="g1">
                             <div class="item-box clearfix">
-                              <i class="icon-twitter"></i>
+                              <i class="icon-github"></i>
                               <div class="item-data">
-                                <h3><a href="https://github.com/nuts4nuts4nuts"></a>Github</h3>
+                                <h3><a href="https://github.com/nuts4nuts4nuts">Github</a></h3>
                               </div>
                             </div>
                           </div>
