updated things again

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                                     Game Programmer
                                 </h4>
                                 <p>
-                                    Hi! I'm a student game programmer currently attending Champlain College. I am particularly interested in graphics, but I have passion for all kinds of programming. I love Math, Literature, Nuts4Nuts, writing implements and Prince. I get excited about tiny things.
+                                    Hi! I'm a student game programmer currently attending Champlain College. I am particularly interested in graphics, but I have passion for all kinds of programming. I love Math, Literature, <a href="http://nuts4nuts.com/">Nuts4Nuts</a>, writing implements and Prince. I get excited about tiny things.
                                 </p>
                             </div>
                         </div>
@@ -133,6 +133,22 @@
                               <i class="icon-github"></i>
                               <div class="item-data">
                                 <h3><a href="https://github.com/nuts4nuts4nuts">Github</a></h3>
+                              </div>
+                            </div>
+                          </div>
+						  <div class="g1">
+                            <div class="item-box clearfix">
+                              <i class="icon-phone"></i>
+                              <div class="item-data">
+                                <h3>917-922-0978</h3>
+                              </div>
+                            </div>
+                          </div>
+						  <div class="g1">
+                            <div class="item-box clearfix">
+                              <i class="icon-linkedin"></i>
+                              <div class="item-data">
+                                <h3><a href="https://www.linkedin.com/pub/david-johnston/9b/574/963">Linked</a></h3>
                               </div>
                             </div>
                           </div>
