--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                           </div>
 						  <div class="g1">
                             <div class="item-box clearfix">
-                              <i class="icon-linkedin"></i>
+                              <i class="icon-linkedin"><a href="https://www.linkedin.com/pub/david-johnston/9b/574/963"></i>
                               <div class="item-data">
                                 <h3><a href="https://www.linkedin.com/pub/david-johnston/9b/574/963">Linked</a></h3>
                               </div>
