--- a/index.html
+++ b/index.html
@@ -146,10 +146,8 @@
                           </div>
 						  <div class="g1">
                             <div class="item-box clearfix">
-                              <a class="btn btn-default" href="https://www.linkedin.com/pub/david-johnston/9b/574/963">
+                              <a class="btn btn-default btn-sm" href="https://www.linkedin.com/pub/david-johnston/9b/574/963">
 								<i class="icon-linkedin"></i></a>
-                              <div class="item-data">
-                                <h3><a href="https://www.linkedin.com/pub/david-johnston/9b/574/963">Linked</a></h3>
                               </div>
                             </div>
                           </div>
