--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                               <i class="icon-github"></i>
                           </div>
 						  <div class="g1">
-                            <a class="btn btn-default btn-sm" href="https://www.linkedin.com/pub/david-johnston/9b/574/963">
+                            <a class="btn btn-default btn-small" href="https://www.linkedin.com/pub/david-johnston/9b/574/963" target="_blank">
 							  <i class="icon-linkedin"></i></a>
                           </div>
                         </div>
