--- a/index.html
+++ b/index.html
@@ -98,25 +98,25 @@
                                     Game Programmer
                                 </h4>
                                 <p>
-                                    Hi! I'm a student game programmer currently attending Champlain College. I am particularly interested in graphics, but I have passion for all kinds of programming. I love Math, Literature, <a href="http://nuts4nuts.com/">Nuts4Nuts</a>, writing implements and Prince. I get excited about tiny things.
+                                    Hi! I'm a student game programmer currently attending Champlain College. I am particularly interested in graphics, but I have passion for all kinds of programming. I love Math, Literature, <a href="http://nuts4nuts.com/" target="_blank">Nuts4Nuts</a>, writing implements and Prince. I get excited about tiny things.
                                 </p>
                             </div>
                         </div>
                         <div class="break"></div>
                         <div class="contact-info">
-                          <div class="g1">
+                          <div class="g7">
                               <i class="icon-envelope"></i>
                           </div>
-                          <div class="g1">
+                          <div class="g7">
                               <i class="icon-facebook"></i>
                           </div>
-                          <div class="g1">
+                          <div class="g7">
                               <i class="icon-twitter"></i>
                           </div>
-                          <div class="g1">
+                          <div class="g7">
                               <i class="icon-github"></i>
                           </div>
-						  <div class="g1">
+						  <div class="g7">
                             <a class="btn btn-default btn-small" href="https://www.linkedin.com/pub/david-johnston/9b/574/963" target="_blank">
 							  <i class="icon-linkedin"></i></a>
                           </div>
