--- a/index.html
+++ b/index.html
@@ -114,10 +114,11 @@
                               <i class="icon-twitter"></i>
                           </div>
                           <div class="g7">
-                              <i class="icon-github"></i>
+							<a class="btn btn-link btn-small" href="https://github.com/nuts4nuts4nuts" target="_blank">
+                              <i class="icon-github"></i></a>
                           </div>
 						  <div class="g7">
-                            <a class="btn btn-default btn-small" href="https://www.linkedin.com/pub/david-johnston/9b/574/963" target="_blank">
+                            <a class="btn btn-link btn-small" href="https://www.linkedin.com/pub/david-johnston/9b/574/963" target="_blank">
 							  <i class="icon-linkedin"></i></a>
                           </div>
                         </div>
