--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
                               <i class="icon-facebook"></i>
                           </div>
                           <div class="g7">
+							<a class="btn btn-success btn-small" href="https://twitter.com/nuts4nuts4nuts" target="_blank">
                               <i class="icon-twitter"></i>
                           </div>
                           <div class="g7">
