--- a/index.html
+++ b/index.html
@@ -105,14 +105,16 @@
                         <div class="break"></div>
                         <div class="contact-info">
                           <div class="g7">
-                              <i class="icon-envelope"></i>
+							<a class="btn btn-link btn-small" href="mailto:dvdjoh@gmail.com" target="_blank">
+                              <i class="icon-envelope"></i></a>
                           </div>
                           <div class="g7">
-                              <i class="icon-facebook"></i>
+							<a class="btn btn-link btn-small" href="https://twitter.com/nuts4nuts4nuts" target="_blank">
+                              <i class="icon-facebook"></i></a>
                           </div>
                           <div class="g7">
-							<a class="btn btn-success btn-small" href="https://twitter.com/nuts4nuts4nuts" target="_blank">
-                              <i class="icon-twitter"></i>
+							<a class="btn btn-link btn-small" href="https://twitter.com/nuts4nuts4nuts" target="_blank">
+                              <i class="icon-twitter"></i></a>
                           </div>
                           <div class="g7">
 							<a class="btn btn-link btn-small" href="https://github.com/nuts4nuts4nuts" target="_blank">
