--- a/index.html
+++ b/index.html
@@ -105,23 +105,23 @@
                         <div class="break"></div>
                         <div class="contact-info">
                           <div class="g7">
-							<a class="btn btn-link btn-small" href="mailto:dvdjoh@gmail.com" target="_blank">
+							<a class="btn btn-default btn-small" href="mailto:dvdjoh@gmail.com" target="_blank">
                               <i class="icon-envelope"></i></a>
                           </div>
                           <div class="g7">
-							<a class="btn btn-link btn-small" href="https://twitter.com/nuts4nuts4nuts" target="_blank">
+							<a class="btn btn-default btn-small" href="https://twitter.com/nuts4nuts4nuts" target="_blank">
                               <i class="icon-facebook"></i></a>
                           </div>
                           <div class="g7">
-							<a class="btn btn-link btn-small" href="https://twitter.com/nuts4nuts4nuts" target="_blank">
+							<a class="btn btn-default btn-small" href="https://twitter.com/nuts4nuts4nuts" target="_blank">
                               <i class="icon-twitter"></i></a>
                           </div>
                           <div class="g7">
-							<a class="btn btn-link btn-small" href="https://github.com/nuts4nuts4nuts" target="_blank">
+							<a class="btn btn-default btn-small" href="https://github.com/nuts4nuts4nuts" target="_blank">
                               <i class="icon-github"></i></a>
                           </div>
 						  <div class="g7">
-                            <a class="btn btn-link btn-small" href="https://www.linkedin.com/pub/david-johnston/9b/574/963" target="_blank">
+                            <a class="btn btn-default btn-small" href="https://www.linkedin.com/pub/david-johnston/9b/574/963" target="_blank">
 							  <i class="icon-linkedin"></i></a>
                           </div>
                         </div>
