--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                               <i class="icon-envelope"></i></a>
                           </div>
                           <div class="g7">
-							<a class="btn btn-default btn-small" href="https://twitter.com/nuts4nuts4nuts" target="_blank">
+							<a href="https://twitter.com/nuts4nuts4nuts" target="_blank">
                               <i class="icon-facebook"></i></a>
                           </div>
                           <div class="g7">
