--- a/index.html
+++ b/index.html
@@ -106,23 +106,23 @@
                         <div class="contact-info">
                           <div class="g7">
 							<a href="mailto:dvdjoh@gmail.com" target="_blank">
-                              <i class="icon-envelope-square"></i></a>
+                              <i class="fa fa-envelope-square"></i></a>
                           </div>
                           <div class="g7">
 							<a href="https://twitter.com/nuts4nuts4nuts" target="_blank">
-                              <i class="icon-facebook-official"></i></a>
+                              <i class="fa fa-facebook-official"></i></a>
                           </div>
                           <div class="g7">
 							<a href="https://twitter.com/nuts4nuts4nuts" target="_blank">
-                              <i class="icon-twitter-square"></i></a>
+                              <i class="fa fa-twitter-square"></i></a>
                           </div>
                           <div class="g7">
 							<a href="https://github.com/nuts4nuts4nuts" target="_blank">
-                              <i class="icon-github-square"></i></a>
+                              <i class="fa fa-github-square"></i></a>
                           </div>
 						  <div class="g7">
                             <a href="https://www.linkedin.com/pub/david-johnston/9b/574/963" target="_blank">
-							  <i class="icon-linkedin-square"></i></a>
+							  <i class="fa fa-linkedin-square"></i></a>
                           </div>
                         </div>
                     </section><!-- content -->
