--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <li class='tab'>
                   <a href="#portfolio"><i class="icon-heart"></i><span> Projects</span></a>
                 </li>
-                <li class='tab'>
+                <li class='tab' style="display: none;">
                   <a href="#contact"><i class="icon-envelope"></i><span> Contact</span></a>
                 </li>
                 <li class='tab' style="display: none;">
