upgrade font-awesome

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
   <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
-  <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
   <link rel="stylesheet" href="css/normalize.min.css">
   <link rel="stylesheet" href="css/main.css">
@@ -57,28 +57,28 @@
           <!-- Tab List -->
             <ul class='etabs'>
                 <li class='tab' id="tab-about">
-                  <a href="#about"><i class="icon-user"></i><span> About Me</span></a>
+                  <a href="#about"><i class="fa fa-user"></i><span> About Me</span></a>
                 </li>
                 <li class='tab'>
-                  <a href="#resume"><i class="icon-file-text"></i><span> Resume</span></a>
+                  <a href="#resume"><i class="fa fa-file-text"></i><span> Resume</span></a>
                 </li>
                 <li class='tab'>
-                  <a href="#portfolio"><i class="icon-heart"></i><span> Projects</span></a>
+                  <a href="#portfolio"><i class="fa fa-heart"></i><span> Projects</span></a>
                 </li>
                 <li class='tab' style="display: none;">
-                  <a href="#contact"><i class="icon-envelope"></i><span> Contact</span></a>
+                  <a href="#contact"><i class="fa fa-envelope"></i><span> Contact</span></a>
                 </li>
                 <li class='tab' style="display: none;">
-                  <a href="#rigidmotors"><i class="icon-heart"></i><span> RigidMotors</span></a>
+                  <a href="#rigidmotors"><i class="fa fa-heart"></i><span> RigidMotors</span></a>
                 </li>
                 <li class='tab' style="display: none;">
-                  <a href="#infection"><i class="icon-heart"></i><span> Infection</span></a>
+                  <a href="#infection"><i class="fa fa-heart"></i><span> Infection</span></a>
                 </li>
                 <li class='tab' style="display: none;">
-                  <a href="#viciousorb"><i class="icon-heart"></i><span> Vicious Orb</span></a>
+                  <a href="#viciousorb"><i class="fa fa-heart"></i><span> Vicious Orb</span></a>
                 </li>
                 <li class='tab' style="display: none;">
-                  <a href="#moma"><i class="icon-heart"></i><span> Moma</span></a>
+                  <a href="#moma"><i class="fa fa-heart"></i><span> Moma</span></a>
                 </li>
             </ul>
 	  <!-- End Tab List -->
@@ -106,23 +106,23 @@
                         <div class="contact-info">
                           <div class="g7">
 							<a href="mailto:dvdjoh@gmail.com" target="_blank">
-                              <i class="icon-envelope"></i></a>
+                              <i class="fa fa-envelope"></i></a>
                           </div>
                           <div class="g7">
 							<a href="https://www.facebook.com/david.johnston.14268769" target="_blank">
-                              <i class="icon-facebook"></i></a>
+                              <i class="fa fa-facebook"></i></a>
                           </div>
                           <div class="g7">
 							<a href="https://twitter.com/nuts4nuts4nuts" target="_blank">
-                              <i class="icon-twitter"></i></a>
+                              <i class="fa fa-twitter"></i></a>
                           </div>
                           <div class="g7">
 							<a href="https://github.com/nuts4nuts4nuts" target="_blank">
-                              <i class="icon-github"></i></a>
+                              <i class="fa fa-github"></i></a>
                           </div>
 						  <div class="g7">
                             <a href="https://www.linkedin.com/pub/david-johnston/9b/574/963" target="_blank">
-							  <i class="icon-linkedin"></i></a>
+							  <i class="fa fa-linkedin"></i></a>
                           </div>
                         </div>
                     </section><!-- content -->
