--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                           </div>
                           <div class="g7">
 							<a href="https://www.facebook.com/david.johnston.14268769" target="_blank">
-                              <i class="fa fa-facebook"></i></a>
+                              <i class="fa fa-facebook-official"></i></a>
                           </div>
                           <div class="g7">
 							<a href="https://twitter.com/nuts4nuts4nuts" target="_blank">
