going square again!

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                         <div class="contact-info">
                           <div class="g7">
 							<a href="mailto:dvdjoh@gmail.com" target="_blank">
-                              <i class="fa fa-envelope"></i></a>
+                              <i class="fa fa-envelope-square"></i></a>
                           </div>
                           <div class="g7">
 							<a href="https://www.facebook.com/david.johnston.14268769" target="_blank">
@@ -114,15 +114,15 @@
                           </div>
                           <div class="g7">
 							<a href="https://twitter.com/nuts4nuts4nuts" target="_blank">
-                              <i class="fa fa-twitter"></i></a>
+                              <i class="fa fa-twitter-square"></i></a>
                           </div>
                           <div class="g7">
 							<a href="https://github.com/nuts4nuts4nuts" target="_blank">
-                              <i class="fa fa-github"></i></a>
+                              <i class="fa fa-github-square"></i></a>
                           </div>
 						  <div class="g7">
                             <a href="https://www.linkedin.com/pub/david-johnston/9b/574/963" target="_blank">
-							  <i class="fa fa-linkedin"></i></a>
+							  <i class="fa fa-linkedin-square"></i></a>
                           </div>
                         </div>
                     </section><!-- content -->
