--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                         <div class="break"></div>
                         <div class="contact-info">
                           <div class="g7">
-							<a class="btn btn-default btn-sm" href="mailto:dvdjoh@gmail.com" target="_blank">
+							<a href="mailto:dvdjoh@gmail.com" target="_blank">
                               <i class="fa fa-envelope-square"></i></a>
                           </div>
                           <div class="g7">
