whole image link

--- a/index.html
+++ b/index.html
@@ -258,13 +258,13 @@ This project taught me an incredibly valuable lesson: always communicate. We wer
                                     <span style="width: 90%"><span>C/C++</span></span>
                                 </div>
                                 <div class="meter carrot">
-                                    <span style="width: 80%"><span>C#</span></span>
+                                    <span style="width: 90%"><span>C#</span></span>
                                 </div>
                                 <div class="meter wisteria">
                                     <span style="width: 75%"><span>Java</span></span>
                                 </div>
                                 <div class="meter sunflower">
-                                    <span style="width: 80%"><span>Action Script 3</span></span>
+                                    <span style="width: 80%"><span>Flash/AS3</span></span>
                                 </div>
                                 <div class="meter asbestos">
                                     <span style="width: 55%"><span>HLSL</span></span>
@@ -309,13 +309,14 @@ This project taught me an incredibly valuable lesson: always communicate. We wer
                         </div>
                         <div class="g5">
                             <div class="image">
-                                <img src="http://i.imgur.com/SzYEibJ.png" alt="">
-                                <div class="image-overlay">
-                                    <div class="image-link">
-                                        <a href="#viciousorb" class="btn">Vicious Orb</a>
-                                    </div>
-                                </div>
-                            </div>
+								<a href="#viciousorb" class="btn">Vicious Orb
+									<img src="http://i.imgur.com/SzYEibJ.png" alt="">
+									<div class="image-overlay">
+										<div class="image-link">
+											<a href="#viciousorb" class="btn">Vicious Orb</a>
+										</div>
+									</div>
+                            </div></a>
                         </div>
                     </section>
                 </div>
