--- a/index.html
+++ b/index.html
@@ -310,13 +310,8 @@ This project taught me an incredibly valuable lesson: always communicate. We wer
                         <div class="g5">
                             <div class="image">
 								<a href="#viciousorb" class="btn">Vicious Orb
-									<img src="http://i.imgur.com/SzYEibJ.png" alt="">
-									<div class="image-overlay">
-										<div class="image-link">
-											<a href="#viciousorb" class="btn">Vicious Orb</a>
-										</div>
-									</div>
-                            </div></a>
+									<img src="http://i.imgur.com/SzYEibJ.png" alt=""></a>
+                            </div>
                         </div>
                     </section>
                 </div>
