--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@ This project taught me an incredibly valuable lesson: always communicate. We wer
                         </div>
                         <div class="g5">
                             <div class="image">
-								<a href="#viciousorb" class="btn">Vicious Orb
+								<a href="#viciousorb" class="btn btn-default">Vicious Orb
 									<img src="http://i.imgur.com/SzYEibJ.png" alt=""></a>
                             </div>
                         </div>
