--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@ This project taught me an incredibly valuable lesson: always communicate. We wer
                         </div>
                         <div class="g5">
                             <div class="image">
-								<a href="#viciousorb" class="btn btn-success">
+								<a href="#viciousorb" class="btn btn-success">TAPS
 									<img src="http://i.imgur.com/SzYEibJ.png" alt=""></a>
                             </div>
                         </div>
