--- a/index.html
+++ b/index.html
@@ -281,37 +281,26 @@ This project taught me an incredibly valuable lesson: always communicate. We wer
                     <section class="clearfix">
                         <div class="g5">
                             <div class="image">
-                                <img src="http://i.imgur.com/pk8GEx2.png" alt="">
-                                <div class="image-overlay">
-                                    <div class="image-link">
-                                        <a href="#rigidmotors" class="btn">Rigid Motors</a>
-                                    </div>
+							<a href="#rigidmotors" class="btn btn-info">
+                                <img src="http://i.imgur.com/pk8GEx2.png" alt=""></a>
+                            </div>
+                        </div>
+                        <div class="g5">
+                            <div class="image">
+								<a href="#infection" class="btn btn-pimary">
+									<img src="http://i.imgur.com/hERvFtU.png" alt=""></a>
                                 </div>
                             </div>
                         </div>
                         <div class="g5">
                             <div class="image">
-                                <img src="http://i.imgur.com/hERvFtU.png" alt="">
-                                <div class="image-overlay">
-                                    <div class="image-link">
-                                        <a href="#infection" class="btn">Infection</a>
-                                    </div>
-                                </div>
+								<a href="#moma" class="btn btn-default">
+									<img src="http://i.imgur.com/T8lSmmo.png" alt=""></a>
                             </div>
                         </div>
                         <div class="g5">
                             <div class="image">
-                                <img src="http://i.imgur.com/T8lSmmo.png" alt="">
-                                <div class="image-overlay">
-                                    <div class="image-link">
-                                        <a href="#moma" class="btn">Click@MOMA</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="g5">
-                            <div class="image">
-								<a href="#viciousorb" class="btn btn-success">TAPS
+								<a href="#viciousorb" class="btn btn-success">
 									<img src="http://i.imgur.com/SzYEibJ.png" alt=""></a>
                             </div>
                         </div>
