--- a/index.html
+++ b/index.html
@@ -281,15 +281,14 @@ This project taught me an incredibly valuable lesson: always communicate. We wer
                     <section class="clearfix">
                         <div class="g5">
                             <div class="image">
-							<a href="#rigidmotors" class="btn btn-info">
-                                <img src="http://i.imgur.com/pk8GEx2.png" alt=""></a>
+								<a href="#rigidmotors" class="btn btn-info">
+									<img src="http://i.imgur.com/pk8GEx2.png" alt=""></a>
                             </div>
                         </div>
                         <div class="g5">
                             <div class="image">
-								<a href="#infection" class="btn btn-pimary">
+								<a href="#infection" class="btn btn-info">
 									<img src="http://i.imgur.com/hERvFtU.png" alt=""></a>
-                                </div>
                             </div>
                         </div>
                         <div class="g5">
