--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@ This project taught me an incredibly valuable lesson: always communicate. We wer
                         </div>
                         <div class="g5">
                             <div class="image">
-								<a href="#infection" class="btn btn-primary">
+								<a href="#infection" class="btn btn-success">
 									<img src="http://i.imgur.com/hERvFtU.png" alt=""></a>
                             </div>
                         </div>
@@ -299,7 +299,7 @@ This project taught me an incredibly valuable lesson: always communicate. We wer
                         </div>
                         <div class="g5">
                             <div class="image">
-								<a href="#viciousorb" class="btn btn-success">
+								<a href="#viciousorb" class="btn btn-primary">
 									<img src="http://i.imgur.com/SzYEibJ.png" alt=""></a>
                             </div>
                         </div>
