contact info right

--- a/index.html
+++ b/index.html
@@ -127,6 +127,28 @@
 							  <i class="fa fa-linkedin-square"></i></a>
                           </div>
                         </div>
+						<div class="contact-info-right">
+                          <div class="g7">
+							<a href="mailto:dvdjoh@gmail.com" target="_blank">
+                              <i class="fa fa-envelope-square"></i></a>
+                          </div>
+                          <div class="g7">
+							<a href="https://www.facebook.com/david.johnston.14268769" target="_blank">
+                              <i class="fa fa-facebook-official"></i></a>
+                          </div>
+                          <div class="g7">
+							<a href="https://twitter.com/nuts4nuts4nuts" target="_blank">
+                              <i class="fa fa-twitter-square"></i></a>
+                          </div>
+                          <div class="g7">
+							<a href="https://github.com/nuts4nuts4nuts" target="_blank">
+                              <i class="fa fa-github-square"></i></a>
+                          </div>
+						  <div class="g7">
+                            <a href="https://www.linkedin.com/pub/david-johnston/9b/574/963" target="_blank">
+							  <i class="fa fa-linkedin-square"></i></a>
+                          </div>
+                        </div>
                     </section><!-- content -->
                 </div>
               <!-- End About Tab Data -->
