--- a/index.html
+++ b/index.html
@@ -135,8 +135,10 @@
                             </div>
                           </div>
                           <div class="g7">
-							<a href="https://www.facebook.com/david.johnston.14268769" target="_blank">
-                              <i class="fa fa-facebook-official"></i></a>
+							<div class="image-small">
+								<a href="http://www.cplusplus.com/" target="_blank">
+									<img src="http://d28mw7vs6gyp4j.cloudfront.net/chilltime/upload/careers/icon/icon_48_1399548315264.jpg" alt=""></a>
+                            </div>
                           </div>
                           <div class="g7">
 							<a href="https://twitter.com/nuts4nuts4nuts" target="_blank">
